# tako

./: .gitignore  AGENTS.md  Cargo.toml  ROADMAP.md  dprint.jsonc  hk.pkl  mise.toml  tako.kdev4
.zed/: settings.json
crates/tako-app/: Cargo.toml  build.rs
crates/tako-app/qml/: PlaceholderSurface.qml  SurfaceContent.qml  SurfaceTabBar.qml  TerminalSurface.qml  WorkspaceSidebar.qml  WorkspaceView.qml  main.qml
crates/tako-app/src/: lib.rs  main.rs  model.rs  qobject.rs  settings.rs  shell.rs
crates/tako-bonsplit/: Cargo.toml
crates/tako-bonsplit/src/: lib.rs
crates/tako-cli/: Cargo.toml
crates/tako-cli/src/: lib.rs
crates/tako-config/: Cargo.toml
crates/tako-config/src/: lib.rs
crates/tako-dbus/: Cargo.toml
crates/tako-dbus/src/: lib.rs
crates/tako-git/: Cargo.toml
crates/tako-git/src/: lib.rs
crates/tako-hooks/: Cargo.toml
crates/tako-hooks/src/: lib.rs
crates/tako-model/: Cargo.toml
crates/tako-model/src/: lib.rs
crates/tako-net/: Cargo.toml
crates/tako-net/src/: lib.rs
crates/tako-notify/: Cargo.toml
crates/tako-notify/src/: lib.rs
crates/tako-render/: Cargo.toml  build.rs
crates/tako-render/cpp/: tako_terminal_view.cpp  tako_terminal_view.h
crates/tako-render/src/: atlas.rs  ffi.rs  font.rs  frame_planner.rs  gl_renderer.rs  lib.rs  panel.rs  qml_init.rs  selection.rs  surface.rs
crates/tako-render/tests/: atlas.rs  frame_planner.rs  surface.rs
crates/tako-session/: Cargo.toml
crates/tako-session/src/: lib.rs
crates/tako-term/: Cargo.toml  build.rs
crates/tako-term/src/: effects.rs  gesture.rs  grid_ref.rs  input.rs  key.rs  lib.rs  mouse.rs  point.rs  pty.rs  selection.rs  snapshot.rs  terminal.rs
crates/tako-term/tests/: pty.rs  snapshot.rs  streaming_pty.rs
crates/tako-terminal/: Cargo.toml  README.md  build.rs
crates/tako-terminal/src/: common.zig  core.zig  font.zig  lib.rs  pty.zig  session.zig  tako_terminal_core.h  tako_terminal_frame.h  tako_terminal_view.cpp  tests.zig
mise-tasks/: ui-smoke
src/: main.rs
tako-terminal/: Cargo.toml  README.md  build.rs
tako-terminal/src/: atlas.zig  bootstrap.zig  common.zig  core.zig  effects.rs  font.zig  frame.zig  gesture.rs  grid_ref.rs  input.rs  input.zig  lib.rs  modes.rs  selection.rs  selection.zig  session.zig  snapshot.rs  snapshot.zig  snapshot_tests.rs  tako_terminal_backend.h  tako_terminal_core.h  tako_terminal_view.cpp  tako_terminal_view.h  terminal.rs  tests.zig
