[workspace]
resolver = "3"
members = [
  "crates/tako-app",
  "crates/tako-render",
  "crates/tako-term",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
cargo_common_metadata = "allow"
# portable-pty 0.8.1 (the latest release) pulls nix 0.25 → bitflags 1, while
# png/rustybuzz/bindgen pull bitflags 2. The dupe is transitive and unavoidable
# until portable-pty ships a newer nix. Allowed workspace-wide on that basis.
multiple_crate_versions = "allow"
