[package]
name = "tako-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "cxx-qt bridge: registers Rust model to QML, main entry."

[lib]
path = "src/lib.rs"

[[bin]]
name = "tako"
path = "src/main.rs"

[dependencies]
cxx = "1.0.95"
cxx-qt = "0.9"
cxx-qt-lib = { version = "0.9", features = ["qt_full"] }
tako-render = { path = "../tako-render" }

[build-dependencies]
cxx-qt-build = { version = "0.9", features = ["link_qt_object_files"] }

[lints]
workspace = true
