[package]
name = "tako-render"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "QQuickItem RHI terminal renderer (cxx-qt-exposed)."

[lib]
path = "src/lib.rs"

[dependencies]
# freetype-rs: safe wrapper over system libfreetype (via freetype-sys) for
# glyph rasterization. rustybuzz: pure-Rust port of HarfBuzz for shaping.
# Substituted for harfbuzz_rs/harfbuzz-sys because harfbuzz-sys pulls its own
# freetype-sys, creating an unsatisfiable cargo `links = "freetype"` conflict
# with freetype-rs. Same shaping engine; revisit if strict system-HarfBuzz
# linkage becomes a requirement.
freetype-rs = "0.38"
# glow: thin GL binding used by the QQuickFramebufferObject renderer. Function
# pointers are resolved through Qt's QOpenGLContext::getProcAddress loader.
glow = "0.17"
log = "0.4"
# lru: bounds the shaped-grapheme cache so bursts of unique text (base64,
# binary) can't grow it without limit. Glyph-id caches stay in plain HashMaps
# since their keyspace is bounded by the font.
lru = "0.12"
png = "0.18"
rustybuzz = "0.18"
tako-term = { path = "../tako-term" }
thiserror = "1.0"

[build-dependencies]
# cbindgen: generates the C header (`tako_render.h`) for the repr(C) types the
# C++ QQuickFramebufferObject subclass consumes (FramePlan, Vertex). One source
# of truth — the hand-mirrored `TakoFramePlan` in the C++ header is gone.
cbindgen = "0.28"

[lints]
workspace = true
