[package]
name = "tako-term"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "libghostty-vt bindgen wrapper, PTY bridge, OSC dispatch."

[lib]
path = "src/lib.rs"

[dependencies]
portable-pty = "0.8"

[build-dependencies]
bindgen = "0.71"

[lints]
workspace = true
