[package]
name = "tako-term"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "libghostty-vt bindgen wrapper, PTY bridge, OSC dispatch."

[lib]
path = "src/lib.rs"

[dependencies]
log = "0.4"
# nix: safe Unix wrappers for the PTY-readiness notify pipe (pipe + fcntl
# non-blocking). Keeps the wake path out of `unsafe` despite the workspace
# `unsafe_code = deny`.
nix = { version = "0.29", default-features = false, features = ["fs", "process"] }
portable-pty = "0.8"

[build-dependencies]
bindgen = "0.71"

[lints]
workspace = true
